@@ -49,7 +49,8 @@
             Added Object.fromEntries (fix #2327)
             Ignore whitespace after ':' in HTTP headers (fix #2331)
             Don't allocate RegEx if just scanning over code 
-            Don't store String/RegEx data in variables if we're just scanning over code 
+            Don't store String/RegEx data in variables if we're just scanning over code
+            Ensure that if possible we create a JsVar Name direct from the underlying string, rather than creating and then converting (#2329)
 
      2v16 : JIT functions now execute in their own function scope (allows arguments)
             Move older 'HY' boards to use `g` for the built-in graphics, not `LCD` (and change docs)
